--- a/notes/pom.xml
+++ b/notes/pom.xml
@@ -10,7 +10,11 @@
     <packaging>war</packaging>
     <name>notesMaven</name>
     <url>http://maven.apache.org</url>
-
+    <properties>
+        <java-version>1.8</java-version>
+        <springframework.version>4.3.1.RELEASE</springframework.version>
+        <jackson.version>2.7.5</jackson.version>
+    </properties>
     <dependencies>
 
         <dependency>
@@ -23,29 +27,29 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.2.5.RELEASE</version>
+            <version>${springframework.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>4.2.5.RELEASE</version>
+            <version>${springframework.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>4.2.5.RELEASE</version>
+            <version>${springframework.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>4.2.5.RELEASE</version>
+            <version>${springframework.version}</version>
         </dependency>
 
         <!--orm-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>4.2.5.RELEASE</version>
+            <version>${springframework.version}</version>
         </dependency>
 
 
@@ -81,6 +85,13 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.4.1212</version>
+        </dependency>
+
+        <!-- jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
     </dependencies>
